@@ -722,7 +722,7 @@ static void move_swarm_spell(object *op) {
     if (op->spell && op->spell->type == SPELL && !(get_map_flags(op->map, &m, target_x, target_y, &target_x, &target_y)&P_OUT_OF_MAP)) {
         /* Bullet spells have a bunch more customization that needs to be done */
         if (op->spell->subtype == SP_BULLET)
-            fire_bullet(owner, op, basedir, op->spell);
+            fire_bullet(owner, op, origin_x+freearr_x[basedir], origin_y+freearr_y[basedir], basedir, op->spell);
         else if (op->spell->subtype == SP_MAGIC_MISSILE)
             fire_arch_from_position(owner, op, origin_x, origin_y, basedir, op->spell);
     }
