@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Make bullet swarm spells fire three tiles wide.
+Andreas Kirschbaum 2009-06-23
+
 Change movement of ball spells.
 Andreas Kirschbaum 2009-06-22
 
